--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>SAXAR</title>
 </head>
 <body>
-    
+    <ul class="menu">
+        <li class="menu-item"><a href="#">О нас</a></li>
+        <li class="menu-item"><a href="#">Новинки</a></li>
+        <li class="menu-item"><a href="#">Кардиганы</a></li>
+        <li class="menu-item"><a href="#">Свитера</a></li>
+        <li class="menu-item"><a href="#">Куртки</a></li>
+        <li class="menu-item"><a href="#">Косухи</a></li>
+        <li class="menu-item"><a href="#">Брюки</a></li>
+        <li class="menu-item"><a href="#">Футболки</a></li>
+        <li class="menu-item"><a href="#">Пуховики</a></li>
+        <li class="menu-item"><a href="#">Платья</a></li>
+        <li class="menu-item"><a href="#">Костюмы</a></li>
+        <li class="menu-item"><a href="#">Худи</a></li>
+        <li class="menu-item"><a href="#">Преимущества</a></li>
+      </ul>
 </body>
 </html>
